--- a/app/views/dailydesignerapps/index.html.erb
+++ b/app/views/dailydesignerapps/index.html.erb
@@ -1,41 +1,19 @@
-<!-- This is the first page
-    This has to be in the form of a complete design page -->
+  <!-- This is the first page
+      This has to be in the form of a complete design page -->
+  <div id="dailydesignerapp_list">
+  <body>
+    <br><br><br><br>
+    <center>
+    <h1>Daily Designer</h1>
 
-<body>
-  <br><br><br><br>
-  <center>
-  <h1>Daily Designer</h1>
 
+  <%= link_to 'Lets Start Designing!', new_dailydesignerapp_path %>
+  </center>
+  <br><br><br>
+  <div class="sketch"></div>
+  <center><img src="/images/sketch.jpg" alt="some_text" width="500" height="500"></center> 
+  </body>
 
-<!-- <table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Sex</th>
-      <th>State</th>
-      <th>City</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  </div>
 
-  <tbody>
-    <% @dailydesignerapps.each do |dailydesignerapp| %>
-      <tr>
-        <td><%= dailydesignerapp.name %></td>
-        <td><%= dailydesignerapp.sex %></td>
-        <td><%= dailydesignerapp.state %></td>
-        <td><%= dailydesignerapp.city %></td>
-        <td><%= link_to 'Show', dailydesignerapp %></td>
-        <td><%= link_to 'Edit', edit_dailydesignerapp_path(dailydesignerapp) %></td>
-        <td><%= link_to 'Destroy', dailydesignerapp, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br> -->
-
-<%= link_to 'Lets Start Designing!', new_dailydesignerapp_path %>
-</center>
-</body>
 
