--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,12 +1,27 @@
-<% if notice %>
+<!--<% if notice %>
+<div id="product_list">
 <p id="notice"><%= notice %></p>
 <% end %>
 <h1>Summer Wardrobe</h1>
 <% @products.each do |product| %>
 <div class="entry">
 	<h3><%= product.title %></h3>
-	<%= image_tag(product.image_url) %>
+	<%= image_tag(product.image_url, :class => 'list_image') %>
 </div>
 <%= button_to 'Dress up', line_items_path(:product_id => product) %>
 <br><br>
-<% end %>
+</div>
+<% end %>-->
+
+<div id="product_list">
+  <h1>Listing products</h1>
+    <% @products.each do |product| %>
+   	<div>
+   	<h3><%= product.title %></h3>
+    <%= image_tag(product.image_url, :class => 'list_image') %>
+    </div>
+  	<%= button_to 'Dress up', line_items_path(:product_id => product) %>
+    <% end %>
+  </div>
+  <br />
+  <%= link_to 'New product', new_product_path %>
